fixed padding for mobile and alignment for mobile

--- a/swc.shewellness/wwwroot/css/site.css
+++ b/swc.shewellness/wwwroot/css/site.css
@@ -383,19 +383,19 @@ h1 {
     margin: auto;
 }
 
-.row-half {
+.row-half, row-half-f {
     width: 50%;
     padding: 3%;
     margin: auto;
 }
 
-.row-third {
+.row-third, .row-third-f  {
     width: 33%;
     padding: 3%;
     margin: auto;
 }
 
-.row-twothird {
+.row-twothird, .row-twothird-f {
     width: 66%;
     padding: 3%;
     margin: auto;
